compiler/test-data/parser/scheme/errors/unclosed_brace.frel
module scheme.errors.unclosed_brace

scheme User {
    name : String
